Fix main menu contexutal region interference on mobile

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
@@ -67,6 +67,11 @@
 /* MAIN NAVIGATION BLOCK
 ------------------------ */
 .block-superfishmain{
+	@include mobileMenu{
+		&.contextual-region{
+			position: static;
+		}
+	}
 	//desktop position
 	@include deskMenu{
 		position: absolute;
